<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryRevise">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:orientation="vertical">
        <!--    상단바    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pointColor"
            android:baselineAligned="true"
            android:orientation="horizontal"
            android:padding="13dp"
            android:scaleType="fitCenter">

            <ImageButton
                android:id="@+id/category_edit_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:maxWidth="30dp"
                android:scaleType="fitCenter"
                android:src="@drawable/backbutton" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/category_edit"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/category_edit_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word_add_complete"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/category_name"
                android:textColor="@color/unActiveColor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/category_new_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"

                android:hint="@string/category_add_title"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/category_explain"
                android:textColor="@color/unActiveColor"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/category_new_explain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"

                android:hint="@string/category_add_explain"
                android:inputType="text" />
        </LinearLayout>


        <TextView
            android:id="@+id/category_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/this_category_edit_btn"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:textSize="19sp"
            android:textColor="@color/warning_color"/>
    </LinearLayout>
</RelativeLayout>