<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wordAdd">

    <LinearLayout
        android:id="@+id/wordCard_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:orientation="vertical">
        <!--상단바-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pointColor"
            android:baselineAligned="true"
            android:orientation="horizontal"
            android:padding="10dp"
            android:scaleType="fitCenter">

            <ImageButton
                android:id="@+id/word_add_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:maxWidth="30dp"
                android:scaleType="fitCenter"
                android:src="@drawable/backbutton" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/word_add_title"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/wordAddCompelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word_add_complete"
                android:textColor="@color/white"
                android:textSize="23sp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/test_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/word_add_word"
                    android:textColor="@color/unActiveColor"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/test_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/word_add_word_edit_text"
                    android:inputType="text" />


                <!--중간선-->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:background="#000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/word_add_mean"
                    android:textColor="@color/unActiveColor"
                    android:textSize="20sp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/word_add_mean_edit_text"
                    android:inputType="text" />

                <!--중간선-->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:background="#000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="12dp"
                        android:adjustViewBounds="true"
                        android:background="@android:color/transparent"
                        android:maxWidth="30dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/word_meaning_plus_btn" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/word_add_mean_add"
                        android:textColor="@color/unActiveColor"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>