<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryAdd">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        android:orientation="vertical">
        <!--    상단바    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/pointColor"
            android:baselineAligned="true"
            android:orientation="horizontal"
            android:padding="13dp"
            android:scaleType="fitCenter">

            <ImageButton
                android:id="@+id/category_add_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:maxWidth="30dp"
                android:scaleType="fitCenter"
                android:src="@drawable/backbutton" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/category_add"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/category_add_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/word_add_complete"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/category_name"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/category_new_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:hint="단어장의 이름을 작성하시오."
                android:inputType="text"
                android:maxLength="45"
                android:maxLines="3"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/category_explain"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/category_new_explain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:hint="@string/category_add_explain"
                android:inputType="text"
                android:maxLength="45"
                android:maxLines="3"
                android:textColor="@color/black" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>