<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundColor">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/wordcard_shadow">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/wordCardBackground"
                android:orientation="vertical"
                android:padding="24dp">

                <TableLayout
                    android:id="@+id/w1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:stretchColumns="0">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <TextView
                            android:id="@+id/list_english_word"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"
                            android:fontFamily="@font/times_new_roman_bold"
                            android:text="@string/word"
                            android:textColor="#000"
                            android:textSize="24dp" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/list_memorization_check"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:onClick="wordMemoryBtnClick"
                                android:src="@drawable/memorization_uncheck" />

                            <ImageView
                                android:id="@+id/list_delete_word"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:adjustViewBounds="true"
                                android:background="@android:color/transparent"
                                android:onClick="deleteWordBtnClick"
                                android:src="@drawable/delete_word" />
                        </LinearLayout>
                    </LinearLayout>
                </TableLayout>

                <TextView
                    android:id="@+id/list_word_mean1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:text="@string/word_m1"
                    android:textColor="#000"
                    android:textSize="16dp"
                    android:maxLength="30"
                    android:maxLines="1"/>

                <TextView
                    android:id="@+id/list_word_mean2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:text="@string/word_m2"
                    android:textColor="#000"
                    android:textSize="16dp"
                    android:maxLength="30"
                    android:maxLines="1"/>

                <TextView
                    android:id="@+id/list_word_mean3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:text="@string/word_m3"
                    android:textColor="#000"
                    android:textSize="16dp"
                    android:maxLength="30"
                    android:maxLines="1"/>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>
