<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wordbook"
    tools:openDrawer="start">
    <!--start로 해 놓고 drawer 생김새 보면서 편집-->

    <RelativeLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/wordCard_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backgroundColor"
            android:orientation="vertical">
            <!--상단바-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/pointColor"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:stretchColumns="1">

                <ImageButton
                    android:id="@+id/hamburgerBarBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12dp"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:maxWidth="35dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/hamburger_bar" />

                <TextView
                    android:id="@+id/categoryName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:gravity="center"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:singleLine="true"
                    android:text="@string/wordbook_explain"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <ImageButton
                    android:id="@+id/plusBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="12dp"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:maxWidth="35dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/plus_btn" />
            </LinearLayout>
            <!--스크롤 뷰-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:paddingLeft="22dp"
                android:paddingRight="22dp">

                <!--단어장 정렬방식 선택-->

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:stretchColumns="1">

                    <TableRow>

                        <TextView
                            android:id="@+id/select_wordSorting"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="전체 ▼" />

                        <TextView
                            android:id="@+id/hideWord"
                            android:layout_column="2"
                            android:text="@string/hide_word"></TextView>

                        <TextView
                            android:id="@+id/hideMeaning"
                            android:paddingLeft="10dp"
                            android:text="@string/hide_meaning"></TextView>
                    </TableRow>
                </TableLayout>

                <!--단어장 이름-->

                <TextView
                    android:id="@+id/wordbook_top_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="25dp"
                    android:text="@string/wordbook_title"
                    android:textSize="23sp" />

                <!--단어장 설명-->

                <TextView
                    android:id="@+id/wordbook_top_explain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="13dp"
                    android:text="@string/wordbook_explain"
                    android:textColor="#A8A8A8"
                    android:textSize="16dp" />

                <!--중간선-->

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="#000000" />

                <TextView
                    android:id="@+id/recommend_word_add"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/recommend_word_add"
                    android:textColor="#A8A8A8"
                    android:textSize="18sp"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/word_card_recycleView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
        <!--하단고정-->

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/wordCard_page"
            android:layout_alignBottom="@id/wordCard_page"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/word_quiz_shadow">

            <TextView
                android:id="@+id/wordQuiz"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/round_quiz_btn"
                android:gravity="center"
                android:text="Q"
                android:textColor="#000"
                android:textSize="30sp" />
        </FrameLayout>
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="160dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/backgroundColor"
        android:fitsSystemWindows="true">

        <!--같은 내용 생성하지 않았으면 하는데... include layout으로 일부 레이아웃만 가져올 수 있나?-->
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="start"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginTop="200dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dicSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:text="사전 검색"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:text="내정보"
                    android:textSize="25dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/logout_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="로그아웃"
                    android:textColor="@color/black" />
            </LinearLayout>
        </RelativeLayout>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>